--- a/src/pages/megasoubor.mdx
+++ b/src/pages/megasoubor.mdx
@@ -1,85 +1,135 @@
+---
+Title: Megasoubor
+---
 import { Quiz, QuizOption } from '@site/src/components/Quiz';
 
-<Quiz question={"Usufruktuář je povinen \: "}>
+
+<Quiz question={"Usufruktuář je povinen: "}>
   <QuizOption label={"a. zachovávat podstatu věci"} isCorrect={true}>
-    Instituce, s. 133: „usufruktuář nesmí věc zničit, ani měnit hospodářské určení věci a disponovat s ní … usufruktuář se musí o věc starat jako dobrý hospodář (bonus pater familias) … usufruktuář se pomocí praetorské stipulace zvané cautio ususfructuaria zavazuje, že věc bude po ukončení tohoto vztahu v pořádku vrácena“
+    Instituce, s. 133: _„usufruktuář nesmí věc zničit, ani měnit hospodářské určení věci a disponovat s ní … usufruktuář se musí o věc starat jako dobrý hospodář (bonus pater familias) … usufruktuář se pomocí praetorské stipulace zvané cautio ususfructuaria zavazuje, že věc bude po ukončení tohoto vztahu v pořádku vrácena“_
   </QuizOption>
   <QuizOption label={"b. těžit plody věci"} isCorrect={false}>
-    Instituce 133, má právo brát plody, ale není povinen, stejný odkaz –* *vlastník mohl požadovat po usufruktuáři slib (kauci), kterým se usufruktuář zavazoval, že bude věc řádně užívat (abych to udělal ještě víc wtf, tak si představ krávu, když jí nebudeš užívat, tedy dojit, tak ztratí mléko a tedy změníš jejím neužíváním podstatu té krávy, takže tady by jsi tu povinnost měla)
+    Těžit plody je právem, nikoliv povinností.
+
+    Instituce, s. 133: _„obsahem je právo užívat cizí věc a brát z ní plody (ius utendi fruendi)“_
+
+    KUS, marg. č. 309, s. 195: _„Právo požívací - ususfructus je právo užívat cizí věc (uti)  těžit z ní plody (frui) tak, aby nebyla změněna její podstata (salva rerum substantia). Podstatu věci je  přitom třeba chápat jako souhrn jejích základních vlastností, kterými je dáno hospodářské určení věci. Předmětem požívacího práva mohly být věci movité i nemovité, ne však věci zuživatelné.“_
   </QuizOption>
   <QuizOption label={"c. platit pravidelnou dávku"} isCorrect={false}>
-    Instituce 133, KUS 195-6)
+    Taková povinnost nemůže být určena. 
+
+    Instituce, s. 132: _„osobní služebnosti [jsou] bezúplatné (lukrativní) vztahy“_
   </QuizOption>
   <QuizOption label={"d. Brát si plody věci"} isCorrect={false}>
-    fotky z nahlížení po testu
+    Usufruktuář má právo, nikoliv povinnost brát si plody věci. 
+  
+    Instituce, s. 133: „obsahem je právo užívat cizí věc a brát z ní plody (ius utendi fruendi)“
+
+    KUS, marg. č. 309, s. 195: _„Právo požívací - ususfructus je právo užívat cizí věc (uti)  těžit z ní plody (frui) tak, aby nebyla změněna její podstata (salva rerum substantia). Podstatu věci je  přitom třeba chápat jako souhrn jejích základních vlastností, kterými je dáno hospodářské určení věci. Předmětem požívacího práva mohly být věci movité i nemovité, ne však věci zuživatelné.“_
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Usufruktuář není povinen \: "}>
+<Quiz question={"Usufruktuář není povinen: "}>
   <QuizOption label={"a. zachovávat podstatu věci"} isCorrect={false}>
-    (KUS str. 195: právo užívat věc, tak aby nebyla změněna její podstata)
+      Usufruktuář je povinnen zachovat podstatu věci.
+
+      Instituce, s. 133: _„usufruktuář nesmí věc zničit, ani měnit hospodářské určení věci a disponovat s ní … usufruktuář se musí o věc starat jako dobrý hospodář (bonus pater familias) … usufruktuář se pomocí praetorské stipulace zvané cautio ususfructuaria zavazuje, že věc bude po ukončení tohoto vztahu v pořádku vrácena“_
+
+      KUS, marg. č. 309, s. 195: _„Právo požívací - ususfructus je právo užívat cizí věc (uti)  těžit z ní plody (frui) tak, aby nebyla změněna její podstata (salva rerum substantia). Podstatu věci je  přitom třeba chápat jako souhrn jejích základních vlastností, kterými je dáno hospodářské určení věci. Předmětem požívacího práva mohly být věci movité i nemovité, ne však věci zuživatelné.“_
   </QuizOption>
   <QuizOption label={"b. brát si plody věci"} isCorrect={true}>
-    (fotky z nahlížení po testu \+ Instituce str. 133: obsahem je právo, nikoliv povinnost*)
+    Usufruktuář má právo, nikoliv povinnost brát si plody věci. 
+  
+    Instituce, s. 133: „obsahem je právo užívat cizí věc a brát z ní plody (ius utendi fruendi)“
+
+    KUS, marg. č. 309, s. 195: „Právo požívací - ususfructus je právo užívat cizí věc (uti) těžit z ní plody (frui) tak, aby nebyla změněna její podstata (salva rerum substantia).“
   </QuizOption>
-  <QuizOption label={"c. ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
+  <QuizOption label={"c. platit pravidelnou dávku"} isCorrect={true}>
+    Taková povinnost nemůže být určena. 
+
+    Instituce, s. 132: _„osobní služebnosti [jsou] bezúplatné (lukrativní) vztahy“_
   </QuizOption>
-  <QuizOption label={"d. platit pravidelnou dávku"} isCorrect={true}>
-    (fotky z nahlížení po testu \+ Instituce str. 132 : osobní služebnosti jsou bezúplatné lukrativní vztahy)
+  <QuizOption label={"d. ani jedna z nabízených odpovědí"} isCorrect={false}>
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Usufruktuář NESMÍ \: "}>
+<Quiz question={"Usufruktuář nesmí: "}>
   <QuizOption label={"a. vybírat nájemné"} isCorrect={true}>
-    (KUS s. 195 \- ususfruktář nesmí zřizovat věcná práva)
+    Usufruktuář nesmí s věcí samou disponovat, tzn. nakládat s věcí s právními důsledky.
+   
+    KUS, marg. č. 309, s. 195: _„Poživatel nesměl působit na věc tak, aby změnil její podstatu, a to ani v tom případě, že by tím byla její hodnota zvýšena. Proto také nesměl věcí disponovat, ani k ní nebo v její prospěch zřizovat věcná práva.“_
+
+    Instituce, s. 103: _„ius disponendi (právo disponovat s věcí) - nakládat s věcí s právními důsledky (např. zcizit, půjčit, zastavit, opustit, zřídit služebnost)“_
+
+    KUS, marg. č. 366, s. 253: _„Locatio - conductio rei je smlouva, při které strana jedna (locator) postupuje straně druhé (conductor) do detence nějakou individuálně určenou věc, aby ji  strana druhá užívala (nájem) anebo užívala a požívala (pacht) po určitou dobu za sjednanou úplatu (buď peněžitou - merx nebo naturální).“_
   </QuizOption>
   <QuizOption label={"b. prodávat plody věci"} isCorrect={false}>
-    (stává se vlastníkem, a tak s ní může nakládat, jak chce)*b. communitas lacrimosa
-  </QuizOption>
-  <QuizOption label={"c. consortium"} isCorrect={true}>
-    (majetkové společenství spoludědiců, společenství dědiců věcí, které nebyly reálně dělitelné \+ [http://www.ius-wiki.eu/rimske-pravo/pfuk/riman/zkouska/skupina-ii/otazka-61](http://www.ius-wiki.eu/rimske-pravo/pfuk/riman/zkouska/skupina-ii/otazka-61), KUS 301\)
+    Usufruktuář může nabýt vlastnictví k plodům věci a jako jejich vlastník je může prodávat.
+    
+    Instituce, s. 103: _„[vlastník má] ius disponendi (právo disponovat s věcí) - nakládat s věcí s právními důsledky (např. zcizit, půjčit, zastavit, opustit, zřídit služebnost)“_
+
+    Instituce, s. 133: _„usufruktuář nabývá vlastnictví k plodům okamžikem uchopení (percepce) nebo sklizní“_
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Pokud společně dva Římané KOUPÍ pozemek, pak vzniká \: "}>
+<Quiz question={"Pokud společně dva Římané koupí pozemek, pak vzniká: "}>
   <QuizOption label={"a. cominternas"} isCorrect={false}>
-    (viz minulá otázka)
+    Římské právo tento pojem nezná. 
   </QuizOption>
   <QuizOption label={"b. condominium"} isCorrect={true}>
-    ([*http://www.ius-wiki.eu/rimske-pravo/pfuk/riman/zkouska/skupina-ii/otazka-11*](http://www.ius-wiki.eu/rimske-pravo/pfuk/riman/zkouska/skupina-ii/otazka-11)***)
+    Condominium je správné označení pro spoluvlastnictví. Instituce ani KUS nenabízí jednoznačnou odpověď, zda může společnou koupí pozemku condominium vzniknout.
+
+    KUS, marg. č. 262, s. 156: _„Je však možno, aby jediné vlastnictví k věci vzniklo zároveň u několika osob, např. tím, že věc, která je reálně nedělitelná, přejde dědickou posloupností na několik spoludědiců. Pak vzniká vztah ozna čovaný jako spoluvlastnictví či communio nebo condominium.“_
   </QuizOption>
   <QuizOption label={"c. comunitas"} isCorrect={false}>
-    
+    Římské právo tento pojem nezná.
   </QuizOption>
   <QuizOption label={"d. communio"} isCorrect={true}>
-    ([http://www.ius-wiki.eu/rimske-pravo/pfuk/riman/zkouska/skupina-ii/otazka-11](http://www.ius-wiki.eu/rimske-pravo/pfuk/riman/zkouska/skupina-ii/otazka-11))
+    Communio je správné označení pro spoluvlastnictví. Instituce ani KUS nenabízí jednoznačnou odpověď, zda může společnou koupí pozemku condominium vzniknout.
+
+    KUS, marg. č. 262, s. 156: _„Je však možno, aby jediné vlastnictví k věci vzniklo zároveň u několika osob, např. tím, že věc, která je reálně nedělitelná, přejde dědickou posloupností na několik spoludědiců. Pak vzniká vztah ozna čovaný jako spoluvlastnictví či communio nebo condominium.“_
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Mezi žaloby chránící vlastnictví již dle zákona XII desek patří \: "}>
+<Quiz question={"Mezi žaloby chránící vlastnictví již dle Zákona dvanácti desek patří: "}>
   <QuizOption label={"a. actio Publiciana in rem"} isCorrect={false}>
-    (Instituce str. 121 odst. c): Zavedena okolo roku 70\. př.n.l.)
+    Byla zavedena několik století po vydání Zákona dvanácti desek.
+    
+    Instituce, s. 121, odst. c): _„[actio Publiciana in rem byla] zavedena byla okolo r. 70 př. n. 1.“_)
   </QuizOption>
-  <QuizOption label={"b. actio serviana"} isCorrect={false}>
-    (Instituce str. 158: Zavedena až koncem 1\. stol. př.n.l. praetorem Serviem)
+  <QuizOption label={"b. actio Serviana"} isCorrect={false}>
+    Byla zavedena několik století po vydání Zákona dvanácti desek.
+    
+    Instituce, s. 158: _„[actio Serviana (také zvaná actio pignariticia) byla] zavedena praetorem Serviem koncem 1. stol. př. n. 1.“_
   </QuizOption>
   <QuizOption label={"c. actio de arboribus succisis"} isCorrect={true}>
-    (Instituce str. 119 odst. f)
+    Byla zavedena v Zákoně dvanácti desek.
+    
+    Instituce, s. 119, odst. f): _„actio de arboribus caedendislsuccisis [je] žaloba ze zákona XII desek proti tomu, kdo by protiprávně porazil cizí stromy“_)
+  </QuizOption>
+    <QuizOption label={"d. žádná z výše uvedených možností"} isCorrect={false}>
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Curiátní shromáždění bylo organizováno na principu \: "}>
+<Quiz question={"Curiátní shromáždění bylo organizováno na principu: "}>
   <QuizOption label={"a. kurijním"} isCorrect={false}>
+    Curiátní shromáždění bylo organizováno na rodovém principu.
+
     (KUS str. 2 uprostřed)
   </QuizOption>
   <QuizOption label={"b. místním"} isCorrect={false}>
+    Curiátní shromáždění bylo organizováno na rodovém principu.
+    
     (KUS str. 2\)
   </QuizOption>
   <QuizOption label={"c. rodovém"} isCorrect={true}>
+    Curiátní shromáždění bylo organizováno na rodovém principu.
+
     (Instituce str. 1, 13, KUS str. 1\)
   </QuizOption>
   <QuizOption label={"d. příbuzenském"} isCorrect={true}>
+    Curiátní shromáždění bylo organizováno na rodovém principu.
+
     (KUS str. 1\)
   </QuizOption>
 </Quiz>
@@ -1111,7 +1161,7 @@ import { Quiz, QuizOption } from '@site/src/components/Quiz';
 </Quiz>
 
 <Quiz question={"Simulované právní jednání je právní jednání \: "}>
-  <QuizOption label={"a. uzavřené "na oko""} isCorrect={false}>
+  <QuizOption label={"a. uzavřené na oko"} isCorrect={false}>
     (z nahlížení po testu)
   </QuizOption>
   <QuizOption label={"b. předstírané"} isCorrect={false}>
@@ -1366,7 +1416,7 @@ import { Quiz, QuizOption } from '@site/src/components/Quiz';
   <QuizOption label={"c. ani jedna z nabízených odpovědí"} isCorrect={false}>
     
   </QuizOption>
-  <QuizOption label={"d. právo upravující "honor""} isCorrect={false}>
+  <QuizOption label={"d. právo upravující honor"} isCorrect={false}>
     (udělování poct)
   </QuizOption>
 </Quiz>
@@ -1473,7 +1523,7 @@ import { Quiz, QuizOption } from '@site/src/components/Quiz';
   </QuizOption>
 </Quiz>
 
-<Quiz question={""Audiatur et altera pars" znamená, že \: "}>
+<Quiz question={"Audiatur et altera pars znamená, že \: "}>
   <QuizOption label={"a. musí být vyslechnuti všichni svědci"} isCorrect={false}>
     
   </QuizOption>
@@ -4314,7 +4364,7 @@ import { Quiz, QuizOption } from '@site/src/components/Quiz';
   </QuizOption>
 </Quiz>
 
-<Quiz question={"" Staneš se mým dědicem, až tvoje žena zemře" je \: "}>
+<Quiz question={"Staneš se mým dědicem, až tvoje žena zemře je \: "}>
   <QuizOption label={"a. ani jedna z nabízených odpovědí"} isCorrect={false}>
     
   </QuizOption>
@@ -4803,7 +4853,7 @@ import { Quiz, QuizOption } from '@site/src/components/Quiz';
   </QuizOption>
 </Quiz>
 
-<Quiz question={""Budeš mi platit 20 sesterciů měsíčně, dokud nedočteš Aristotelovu Politiku" je podmínka \: "}>
+<Quiz question={"Budeš mi platit 20 sesterciů měsíčně, dokud nedočteš Aristotelovu Politiku je podmínka \: "}>
   <QuizOption label={"a. ani jedna z nabízených odpovědí"} isCorrect={false}>
     (KUS, str. 102\)
   </QuizOption>
@@ -5160,7 +5210,7 @@ import { Quiz, QuizOption } from '@site/src/components/Quiz';
   </QuizOption>
 </Quiz>
 
-<Quiz question={""Staneš se dědicem, až tvoje žena porodí dvojčata" je podmínka \: "}>
+<Quiz question={"Staneš se dědicem, až tvoje žena porodí dvojčata je podmínka \: "}>
   <QuizOption label={"a. potestativní"} isCorrect={false}>
     (KUS str. 101-103 \+ Instituce str. 305 \- splnění/nesplnění podmínky závisí na vůli jedné ze stran právního jednání – tzn. tady nezáleží na vůli zůstavitele ani dědice, ale té ženy, což je 3\. osoba)
   </QuizOption>
@@ -5175,7 +5225,7 @@ import { Quiz, QuizOption } from '@site/src/components/Quiz';
   </QuizOption>
 </Quiz>
 
-<Quiz question={""Staneš se dědicem, pokud postavíš sochu mojí milence" je podmínka \: "}>
+<Quiz question={"Staneš se dědicem, pokud postavíš sochu mojí milence je podmínka \: "}>
   <QuizOption label={"a. potestativní"} isCorrect={false}>
     (Instituce str. 289 \+ *KUS str. 102*)
   </QuizOption>
@@ -5367,7 +5417,7 @@ import { Quiz, QuizOption } from '@site/src/components/Quiz';
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Služebnost "nestavět výše" \: "}>
+<Quiz question={"Služebnost nestavět výše \: "}>
   <QuizOption label={"a. je negativní"} isCorrect={true}>
     (z moodle cvičný test 2021 \+ KUS str. 194\)
   </QuizOption>
@@ -6646,292 +6696,4 @@ import { Quiz, QuizOption } from '@site/src/components/Quiz';
   <QuizOption label={"d. žádná z předchozích odpovědí není správná"} isCorrect={false}>
     
   </QuizOption>
-</Quiz>
-
-<Quiz question={"1\.    Od počátku neplatné právní jednání se označuje jako \: "}>
-</Quiz>
-
-<Quiz question={"2\.   	Jak dlouhá doba je podmínkou vydržení mancipační nemovitosti do kviritského vlastnictví v období klasického římského práva?: "}>
-</Quiz>
-
-<Quiz question={"Jak dlouhá doba je podmínkou vydržení mancipační movitosti do kviritského vlastnictví v období klasického římského práva?: "}>
-</Quiz>
-
-<Quiz question={"3\.   	Formulujte latinsky zásadu, jíž se řídí akcese nemovité a movité věci.: "}>
-</Quiz>
-
-<Quiz question={"4\.       	Latinským termínem pro držbu je: "}>
-</Quiz>
-
-<Quiz question={"5\.   	Culpa lata je česky: "}>
-</Quiz>
-
-<Quiz question={"6\.   	Jak se nazývá nabytí vlastnictví formou tzv. zpracování (latinsky)?: "}>
-</Quiz>
-
-<Quiz question={"7\.   	Pojmenujte latinsky kategorii věcí, které jsou vyloučeny z obchodu.: "}>
-</Quiz>
-
-<Quiz question={"8\.   	Jak se latinsky označuje nabytí držby fyzickým předáním věci?: "}>
-</Quiz>
-
-<Quiz question={"9\.    Pojmenujte latinsky věcné právo k věci cizí, jímž oprávněný může doživotně, bezplatně brát z věci plody: "}>
-</Quiz>
-
-<Quiz question={"10\.   Odkládací podmínka: "}>
-</Quiz>
-
-<Quiz question={"11\.   Škoda se latinsky řekne: "}>
-</Quiz>
-
-<Quiz question={"12\.   Označte latinsky způsob nabytí vlastnictví, pokud tesám z cizího mramoru sochu: "}>
-</Quiz>
-
-<Quiz question={"13\.   Pojmenujte přesně latinsky subjektivní složku držby.: "}>
-</Quiz>
-
-<Quiz question={"14\.   Opakem právního jednání kauzálního je právní jednání: "}>
-</Quiz>
-
-<Quiz question={"15\.   Gaius vykoval v dobré víře z Aulovy podkovy vidle, kdo bude podle justinánského práva vlastníkem vidlí? (jménem): "}>
-</Quiz>
-
-<Quiz question={"16\.   Pojmenujte česky jednoslovně právní jednání, které je platné, ale následkem žaloby může být zneplatněno: "}>
-</Quiz>
-
-<Quiz question={"17\.   Jakou žalobou (latinsky) se může v klasické době bránit oprávněný ze služebnosti proti tomu, kdo mu v jejím výkonu brání?: "}>
-</Quiz>
-
-<Quiz question={"18\.   Pojmenujte latinsky přesně nástroj, jímž se bude bránit tzv. bonitární vlastník proti vindikaci kviritského vlastníka.: "}>
-</Quiz>
-
-<Quiz question={"19\.   Uveďte přesné latinské pojmenování skupiny interdikt, která slouží k ochraně držby proti rušení či ohrožení.: "}>
-</Quiz>
-
-<Quiz question={"20\.   Bezplatné právní jednání se označuje jako: "}>
-</Quiz>
-
-<Quiz question={"21\.   Pojmenujte latinsky okamžik, kdy emphyteuta nabývá vlastnictví k plodům.: "}>
-</Quiz>
-
-<Quiz question={"22\.   Pojmenujte latinsky žalobu, jíž se bude bránit vlastník proti zásahům do držby.: "}>
-</Quiz>
-
-<Quiz question={"23\.   Pojmenujte latinsky část obsahu právního jednání, která je klíčová pro jeho platnost a druhové určení: "}>
-</Quiz>
-
-<Quiz question={"24\.   Uveďte označení pro odkládací podmínku: "}>
-</Quiz>
-
-<Quiz question={"25\.   Pojmenujte přesně latinsky situaci, kdy je mi předávána držba k věci, kterou jsem měl již předtím v detenci.: "}>
-</Quiz>
-
-<Quiz question={"26\.   Aulus utkal v dobré víře z luliovy vlny tkaninu. Pojmenujte latinsky způsob, jímž vlastník tkaniny získal vlastnictví.: "}>
-</Quiz>
-
-<Quiz question={"27\.   Právní jednání uzavřené "na oko" se označuje jako: "}>
-</Quiz>
-
-<Quiz question={"28\.   Jestliže někdo uloví volně žijící zvěř, jak se latinsky nazývá způsob, jímž k ní nabyl vlastnictví?: "}>
-</Quiz>
-
-<Quiz question={"29\.   Pojmenujte latinsky praetorský mimořádný prostředek, jímž se lze bránit proti tomu, kdo za použití ozbrojeného násilí zbavil druhého držby nemovitosti?: "}>
-</Quiz>
-
-<Quiz question={"30\.   Uveďte latinský název pro omyl: "}>
-</Quiz>
-
-<Quiz question={"31\.   Pojmenujte latinsky věcněprávní status zloděje k ukradené věci?: "}>
-</Quiz>
-
-<Quiz question={"32\.   Reservatio mentalis je česky (nepoužijte pouhé zčeštění): "}>
-</Quiz>
-
-<Quiz question={"33\.   Pokud za dva sestercie získám mrkev, abych ji snědl, co bude iusta causa traditionis v tomto případě? (jednoslovně): "}>
-</Quiz>
-
-<Quiz question={"34\.   Pojmenujte latinsky okamžik, kdy usufruktuář nabývá vlastnictví k plodům: "}>
-</Quiz>
-
-<Quiz question={"35\.   Jaký je latinský pojem pro dobrou víru?: "}>
-</Quiz>
-
-<Quiz question={"36\.   Následně neplatné právní jednání se označuje jako: "}>
-</Quiz>
-
-<Quiz question={"37\.   Pojmenujte latinsky můj věcněprávní vztah k věci předtím, než jsem ji nabyl pomocí traditio brevi manu?: "}>
-</Quiz>
-
-<Quiz question={"38\.   Uveďte označení pro rozvazovací podmínku: "}>
-</Quiz>
-
-<Quiz question={"39\.   Uveďte latinsky jeden abstraktní způsob převodu vlastnictví.: "}>
-</Quiz>
-
-<Quiz question={"40\.   Jaká žaloba slouží na ochranu tzv. bonitárního vlastnictví? (latinsky): "}>
-</Quiz>
-
-<Quiz question={"41\.   Culpa levis je česky: "}>
-</Quiz>
-
-<Quiz question={"nakládat s věcí.: "}>
-</Quiz>
-
-<Quiz question={"43\.   Část obsahu právního jednání, která je jeho součástí, aniž by to bylo výslovně uvedeno, se latinsky nazývá: "}>
-</Quiz>
-
-<Quiz question={"44\.   Pojmenujte latinsky ujednání, dle něhož se účinnost celého právního jednání bude odvíjet od toho, zdali faktická okolnost nastane nebo nenastane: "}>
-</Quiz>
-
-<Quiz question={"45\.   Gaius vytesal v dobré víře z Aulova pařezu sochu. Pojmenujte latinsky způsob, jímž vlastník sochy získal vlastnictví.: "}>
-</Quiz>
-
-<Quiz question={"47\.   Uveďte latinsky jednoslovný příklad na kauzální způsob převodu vlastnictví.: "}>
-</Quiz>
-
-<Quiz question={"48\.   Latinským termínem pro vůli subjektu, nakládat s věcí jako s vlastní je: "}>
-</Quiz>
-
-<Quiz question={"49\.   Pojmenujte latinsky přesně objektivní složku držby.: "}>
-</Quiz>
-
-<Quiz question={"50\.   Odpovědnost za nižší náhodu je latinsky: "}>
-</Quiz>
-
-<Quiz question={"51\.   Pojmenujte latinsky situaci, kdy vlastník svoji věc definitivně opustí.: "}>
-</Quiz>
-
-<Quiz question={"53\.   Uveďte přesně dvouslovný latinský pojem pro vlastníkovo oprávnění zničit věc.: "}>
-</Quiz>
-
-<Quiz question={"54\.   Gaius si v dobré víře koupil od zloděje slepici a odnesl si ji. Která podmínka vydržení mu schází po jednom roce? (latinsky): "}>
-</Quiz>
-
-<Quiz question={"55\.   Latinským pojmem pro vlastnictví je (uveďte jeden): "}>
-</Quiz>
-
-<Quiz question={"56\.   Latinským pojmem pro právní jednání je: "}>
-</Quiz>
-
-<Quiz question={"57\.   Jestliže se domnívám, že je mi věc Aulem darována, ale Aulus mi ji pouze chtěl vypůjčit, pak se jedná o (latinsky): "}>
-</Quiz>
-
-<Quiz question={"58\.   Jak se v latině označuje přímé všeobecné, absolutní faktické panství nad věcí?: "}>
-</Quiz>
-
-<Quiz question={"59\.   Pojmenujte přesně latinsky actio duplex, kterou mají k disposici spoluvlastníci: "}>
-</Quiz>
-
-<Quiz question={"60\.   Pojmenujte přesně latinsky faktické ovládání věci u držby: "}>
-</Quiz>
-
-<Quiz question={"61\.   Uveďte přesné latinské pojmenování prohlášení slavnostní formule při mancipaci: "}>
-</Quiz>
-
-<Quiz question={"62\.   Pokud neplatnost právního jednání nastává ze samotného práva, pak tato neplatnost nastává (latinsky): "}>
-</Quiz>
-
-<Quiz question={"63\.   Aulus vytvořil v dobré víře z Gaiova kovu prsten, kdo bude podle justiniánského práva vlastníkem prstenu? (jménem): "}>
-</Quiz>
-
-<Quiz question={"64\.   Právní jednání, ke kterému strany směřují, ale zakrývají jej jiným právním jednáním, se označuje jako: "}>
-</Quiz>
-
-<Quiz question={"65\.   Pojmenujte latinsky způsob, kterým osoba nabyla vlastnictví k ulovené divoké zvěři\<: "}>
-</Quiz>
-
-<Quiz question={"66\.   Jak se nazývá nabytí vlastnictví, když vyrobíte barák z cizích prken: "}>
-</Quiz>
-
-<Quiz question={"67\.   Pojmenujte latinsky kategorii věcí vyloučených z právního obchodu: "}>
-</Quiz>
-
-<Quiz question={"68\.   Absolutní práva působí: "}>
-</Quiz>
-
-<Quiz question={"69\.   Označte latinsky způsob nabytí vlastnictví, pokud vyrobím z cizích prken loď:: "}>
-</Quiz>
-
-<Quiz question={"70\.   Jak se nazývá nabytí vlastnictví formou tzv. přírůstku latinsky?: "}>
-</Quiz>
-
-<Quiz question={"71\.   Hrubou nedbalost latinsky nazýváme:: "}>
-</Quiz>
-
-<Quiz question={"72\.   Pojmenujte osobu, která je odvozeným držitelem v případě zajištění pohledávky pomoci pignu:: "}>
-</Quiz>
-
-<Quiz question={"73\.   Pojmenujte česky žalobu, jíž se bude bránit vlastník proti zásahům do držby: "}>
-</Quiz>
-
-<Quiz question={"74\.   Pokud se při zkoumání platnosti právního jednání přihlíží k důvodu, proč bylo uzavřeno, pak se jedná o právní jednání: "}>
-</Quiz>
-
-<Quiz question={"75\.   Pojmenujte věcněprávní status depozitáře, který uschovanou věc prodal: "}>
-</Quiz>
-
-<Quiz question={"76\.   Opakem právního jednání abstraktního je právní jednání: "}>
-</Quiz>
-
-<Quiz question={"77\. Pojmenujte kurijní zákon o nejvyšší moci: "}>
-</Quiz>
-
-<Quiz question={"78\.   Části právního jednání, které musí být vyjádřeny a které určují typ právního jednání, označujeme jako (latinsky): "}>
-</Quiz>
-
-<Quiz question={"79\.   Jestliže se domnívám, že je mi věc Aulem darována, ale Aulus mi ji pouze chtěl vypůjčit, pak se jedná o (latinsky): "}>
-</Quiz>
-
-<Quiz question={"80\.   Pokud pro účely nabývání práv musíme přimyslet a odmyslet určitou skutečnost, jedná se o: "}>
-</Quiz>
-
-<Quiz question={"81\.   Pojmenujte latinsky praetorský mimořádný prostředek, jímž se lze bránit proti tomu, kdo rušil druhého v držbě nemovitosti?: "}>
-</Quiz>
-
-<Quiz question={"82\.   Uveďte žalobu, která fakticky postavila tzv. bonitární vlastnictví na roveň vlastnictví kviritského? (latinsky): "}>
-</Quiz>
-
-<Quiz question={"83\.   Relativní práva působí (latinsky): "}>
-</Quiz>
-
-<Quiz question={"84\.   Pokud causa formálního právního jednání bude neplatná, jaké bude samotné formální jednání. Odpovězte jednoslovně: "}>
-</Quiz>
-
-<Quiz question={"85\.   Části právního jednání, které se stávají součástí právního jednání jen v případě, když se tak jednající dohodnou, označujeme jako (latinsky): "}>
-</Quiz>
-
-<Quiz question={"86\.   Právní jednání, jehož cílem bylo obejít zákonný zákaz, označujeme jako jednání (latinsky): "}>
-</Quiz>
-
-<Quiz question={"87\.   Pokud pro účely nabývání práv musíme přimyslet či odmyslet určitou skutečnost, jedná se o: "}>
-</Quiz>
-
-<Quiz question={"88\.   Pokud se do běhu lhůty započítávají všechny dny, jedná se o: "}>
-</Quiz>
-
-<Quiz question={"89\.   Formulujte latinsky zásadu, jíž se řídí přírůstek nemovité a movité věci.: "}>
-</Quiz>
-
-<Quiz question={"90\.   Pokud k platnosti právního jednání postačuje projev vůle jednoho člověka, pak se jedná o právní jednání: "}>
-</Quiz>
-
-<Quiz question={"91\.   Uveďte přesně dvouslovný latinsky pojem pro vlastníkovo oprávnění věc zničit.: "}>
-</Quiz>
-
-<Quiz question={"92\.   Lehkou nedbalost latinsky nazýváme: "}>
-</Quiz>
-
-<Quiz question={"93\.  Pojmenujte jedním slovem pasivně legitimovaného k exceptio rei venditae ac traditae.: "}>
-</Quiz>
-
-<Quiz question={"94\.  Pojmenujte jedním slovem latinsky pasivně legitimovaného k exceptio rei venditae ac traditae.: "}>
-</Quiz>
-
-<Quiz question={"95\.   Pojmenujte latinsky věcné právo k věci cizí, jímž oprávněný může doživotně, bezplatně tuto věc užívat a brát z ní plody: "}>
-</Quiz>
-
-<Quiz question={"*97\.*   Jaký je latinský pojem pro zlou víru: "}>
-</Quiz>
-
-<Quiz question={"*98\.*   Právní jednání, jehož cílem bylo obejít zákonný zákaz označujeme jako jednání (latinsky): "}>
 </Quiz>
